<resources>
    <string name="app_name">MagasinEnLigne</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="address">Address</string>
    <string name="welcome_client">Welcome Client</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="register">Register</string>
    <string name="welcome_merchant">Welcome Merchant</string>
    <string name="admin_verification_message">Please provide the correct Pin to verify that you are the application admin</string>
    <string name="required_field_error">required field</string>
    <string name="password_not_match_error">password does not match</string>
    <string name="password_length_error">Password must be at least 8 characters</string>
    <string name="password_upper_case_error">Password should contain at least one upper case letter</string>
    <string name="password_lower_case_error">Password should contain at least one lower case letter</string>
    <string name="password_digit_error">Password should contain at least one digit</string>
    <string name="password_special_character_error">Password should contain at least one special character</string>
    <string name="phone_not_valid_error">phone not valid</string>
    <string name="my_account">My Account</string>
    <string name="maps_api_key">AIzaSyBT8dnNZ5Y2DOMnz-oM_7nCDxtOBWL2Ul8</string>
    <string name="get_position">Get Position</string>
    <string name="change_password">change password</string>
    <string name="change_phone">change phone</string>
    <string name="change_email">change email</string>
    <string name="logout">logout</string>
    <string name="error">Error</string>
    <string name="incorrect_pin">The pin you entered is incorrect, please make sure you insert the correct pin to login as an admin</string>
    <string name="ok">Ok</string>
    <string name="admin_code">30184</string>
    <string name="alert">Alert</string>
    <string name="location_is_necessary">Location permission is necessary for better service</string>
    <string name="no_items_found">No items found</string>
    <string name="search">Search…</string>
    <string name="price">price</string>
    <string name="sex">sex</string>
    <string name="age">age</string>
    <string name="category">category</string>
    <string name="filters">Filters</string>
    <string name="get">get</string>
    <string name="cancel">Cancel</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="permission_importance_message">Dear customer, for better experience and service we need to get your exact location</string>
    <string name="my_current_location">My current location</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="try_again">Try again in %1$d seconds</string>
    <string name="try_again_in_30">Too many attempts, try again in 30 seconds</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_tip">You will receive an SMS shortly with 6 digits to verify your number.\nPlease don\'t bother yourself, your phone number will be verified automatically.</string>
    <string name="code">code</string>
    <string name="resend_code">Resend code</string>
    <string name="my_products">My Products</string>
    <string name="my_customers">My Customers</string>
    <string name="more_details">More Details</string>
    <string name="my_wish_list">My Wish List</string>
    <string name="find_us">Find us</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wallet">My Wallet</string>
    <string name="all_delivery_items">All delivery items</string>
    <string name="all_orders">All orders</string>
    <string name="all_products">All products</string>
    <string name="all_merchants">All merchants</string>
    <string name="all_clients">All clients</string>
    <string name="send_broadcast">Send a broadcast for your favorite customers</string>
    <string name="home_shopping">Home Shopping</string>
    <string name="address_1">address: %1$s</string>
    <string name="email">email: %1$s</string>
    <string name="phone_number_1">phone number: %1$s</string>
    <string name="name_1">name: %1$s</string>
    <string name="id">id: %1$s</string>
    <string name="delivery_charges">delivery charges: %1$s</string>
    <string name="status">status: %1$s</string>
    <string name="order_id">order id: %1$s</string>
    <string name="time">time: %1$s</string>
    <string name="to_merchant">to merchant: %1$s</string>
    <string name="from_client">from client: %1$s</string>
    <string name="cost">cost: %1$s</string>
    <string name="description">description: %1$s</string>
    <string name="sex_1">sex: %1$s</string>
    <string name="age_category">age category: %1$s</string>
    <string name="price_1">price: %1$s</string>
    <string name="on_sale">on sale: %1$s</string>
    <string name="sale_price">sale price: %1$s</string>
    <string name="category_1">category: %1$s</string>
    <string name="client">Client %1$d</string>
    <string name="item">Item %1$d</string>
    <string name="order">Order %1$d</string>
    <string name="product">Product %1$d</string>
    <string name="merchant">Merchant %1$d</string>
    <string name="no_products">No Products</string>
    <string name="no_orders">No Orders</string>
    <string name="no_merchants">No Merchants</string>
    <string name="no_clients">No Clients</string>
    <string name="no_items">No Items</string>
    <string name="name">name</string>
    <string name="electronics">electronics</string>
    <string name="home_appliances">home appliances</string>
    <string name="makeup">makeup</string>
    <string name="clothing">clothing</string>
    <string name="sale_price_1">sale price</string>
    <string name="on_sale_1">on sale?</string>
    <string name="_31_99">31–99</string>
    <string name="_25_30">25–30</string>
    <string name="_16_24">16–24</string>
    <string name="_10_15">10–15</string>
    <string name="_4_9">4–9</string>
    <string name="_0_3">0–3</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="add_product">Add Product</string>
    <string name="add">Add</string>
    <string name="choose_image_from">Choose image from…</string>
    <string name="gallery">"gallery</string>
    <string name="camera">"camera</string>
    <string name="update">Update…</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="sale_price_bigger_than_initial_error">Sale Price must be lower than initial price</string>
    <string name="null_price_error">Null price is not allowed</string>
    <string name="sale_price_required_error">Sale Price is Required</string>
    <string name="price_required_error">Price is Required</string>
    <string name="name_required_error">Name is Required</string>
    <string name="image_required_error">Image is required</string>
    <string name="image_processing_error">Error processing image, please try again</string>
    <string name="add_to_wish">Add to wish</string>
    <string name="buy">Buy</string>
    <string name="confirm_op">Please confirm the operation you want to do</string>
    <string name="get_product">Getting %1$s</string>
    <string name="order_placed">Your order has been sent, you will be notified soon with your delivery time</string>
    <string name="added_to_wish">Awesome, this product was added to your wish list</string>
    <string name="removed_wish">This product was removed from your wish list</string>
    <string name="put_on_sale">put on sale</string>
    <string name="no_customers">No customers</string>
    <string name="broadcast_message">broadcast message</string>
    <string name="send_broadcast_1">Send broadcast</string>
    <string name="broadcast_message_missing_error">Please fill in the broadcast message area to proceed</string>
    <string name="broadcast_receiver_missing_error">At least one user should be selected</string>
    <string name="users_to_be_notified">The users you have selected will be notified soon</string>
    <string name="this_item_will_be_on_sale_for">This item will be on sale for…</string>
    <string name="sale">Sale</string>
    <string name="sale_price_error">Sale price is bigger than price</string>
    <string name="product_on_sale">The product is now on sale</string>
    <string name="static_alert">All these locations are static, they are not real.\nStores are coming soon, it is the future of the app.</string>
    <string name="email_1">email</string>
    <string name="confirm">Confirm</string>
    <string name="change_email_1">Change Email</string>
    <string name="change_password_1">Change Password</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="phone">phone</string>
    <string name="change_phone_1">Change Phone</string>
    <string name="unable_to_change">Same phone number detected, unable to change.</string>
    <string name="phone_not_valid">Phone is not valid</string>
    <string name="wrong_old">Wrong old password</string>
    <string name="not_matching">Passwords do not match</string>
    <string name="password_error">Password must be min 8 characters, with at least one special character, one upper case letter and one lower case letter.</string>
    <string name="phone_updated">Phone updated successfully</string>
    <string name="same_email">Same email detect, unable to change</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_updated">Password updated successfully</string>
    <string name="email_updated">Email updated successfully</string>
    <string name="picture_updated">Picture updated successfully</string>

    <array name="categories">
        <item>all</item>
        <item>clothing</item>
        <item>electronics</item>
        <item>makeup</item>
        <item>home appliances</item>
    </array>
    <array name="ages">
        <item>all</item>
        <item>0-3</item>
        <item>4-9</item>
        <item>10-15</item>
        <item>16-24</item>
        <item>25-30</item>
        <item>31-99</item>
    </array>
    <array name="sexes">
        <item>all</item>
        <item>female</item>
        <item>male</item>
    </array>
    <array name="prices">
        <item>all</item>
        <item>lowest</item>
        <item>highest</item>
    </array>
</resources>