<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/bt_get_all_clients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/all_clients"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/bt_get_all_merchants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/bt_get_all_merchants"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/all_merchants"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/bt_get_all_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_get_all_clients"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/bt_get_all_products"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/all_products"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/bt_get_all_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_get_all_merchants"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/bt_get_all_orders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/all_orders"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/bt_get_all_delivery_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_get_all_products"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/bt_get_all_delivery_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/all_delivery_items"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_get_all_orders"
        app:layout_constraintWidth_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>