<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_fields"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_clothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="rg_sex,cl_ages" />

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/et_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:srcCompat="@drawable/ic_camera" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_edit_text_registration"
            android:gravity="center"
            android:hint="@string/name"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorWhite"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/cl_categories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_product"
            app:layout_constraintWidth_percent="0.8" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_categories"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/rg_sex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintWidth_percent="0.8">

            <RadioGroup
                android:id="@+id/rg_categories_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toTopOf="@id/rg_categories_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_clothing"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/clothing" />

                <RadioButton
                    android:id="@+id/rb_makeup"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/makeup" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_categories_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_categories_1">

                <RadioButton
                    android:id="@+id/rb_appliances"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_appliances" />

                <RadioButton
                    android:id="@+id/rb_electronics"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/electronics" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toTopOf="@id/cl_ages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_categories"
            app:layout_constraintWidth_percent="0.8">

            <RadioButton
                android:id="@+id/rb_female"
                style="@style/MyRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/rb_male"
                style="@style/MyRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />
        </RadioGroup>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_ages"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/et_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_sex"
            app:layout_constraintWidth_percent="0.8">

            <RadioGroup
                android:id="@+id/rg_ages_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintBottom_toTopOf="@id/rg_ages_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_0_3"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:checked="true"
                    android:text="@string/_0_3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/rb_4_6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/rb_4_6"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:text="@string/_4_9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/rb_10_15"
                    app:layout_constraintStart_toEndOf="@id/rb_0_3"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/rb_10_15"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:text="@string/_10_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/rb_4_6"
                    app:layout_constraintTop_toTopOf="parent" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_ages_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_ages_1">

                <RadioButton
                    android:id="@+id/rb_16_24"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:text="@string/_16_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/rb_25_30"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/rb_25_30"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:text="@string/_25_30"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/rb_31_99"
                    app:layout_constraintStart_toEndOf="@id/rb_16_24"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/rb_31_99"
                    style="@style/MyRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:text="@string/_31_99"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/rb_25_30"
                    app:layout_constraintTop_toTopOf="parent" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_edit_text_registration"
            android:gravity="center"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorWhite"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/cb_on_sale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_ages"
            app:layout_constraintWidth_percent="0.8" />


        <CheckBox
            android:id="@+id/cb_on_sale"
            style="@style/MyRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/on_sale_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="@id/et_price"
            app:layout_constraintTop_toBottomOf="@id/et_price"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/et_sale_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/background_edit_text_registration"
            android:gravity="center"
            android:hint="@string/sale_price_1"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorWhite"
            android:textSize="14sp"
            android:visibility="gone"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@id/cb_on_sale"
            app:layout_constraintEnd_toEndOf="@id/et_price"
            app:layout_constraintStart_toEndOf="@id/cb_on_sale"
            app:layout_constraintTop_toTopOf="@id/cb_on_sale" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bt_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_bottom"
        app:layout_constraintWidth_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>