<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/welcome_merchant"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:autoSizeMaxTextSize="32sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_edit_text_registration"
        android:gravity="center"
        android:hint="@string/full_name"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/et_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_edit_text_registration"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_edit_text_registration"
        android:gravity="center"
        android:hint="@string/password"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/et_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_edit_text_registration"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintWidth_percent="0.8" />


    <Button
        android:id="@+id/bt_register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_bottom"
        app:layout_constraintWidth_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>